istio-advanced-rules/istio-networking-springcloud/store-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "customer.store.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store
spec:
  hosts:
    - "customer.store.com"
  gateways:
    - store-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: customer
            port:
              number: 8080
